freebsd-buildutils (10.3~svn296373-1) UNRELEASED; urgency=medium

  * New upstream snapshot of 10.3-RC1
  * Mark freebsd-mk as Multi-Arch: foreign (thanks, Helmut Grohne!)
  * Map Debian's kfreebsd-armhf to FreeBSD's armv6 MACHINE_ARCH

 -- Steven Chamberlain <steven@pyro.eu.org>  Sat, 05 Mar 2016 00:27:01 +0000

freebsd-buildutils (10.3~svn295289-1) experimental; urgency=medium

  * New upstream snapshot of 10.3-BETA1
  * Make get-orig-source tarball reproducible
  * Refresh patches:
    - mk_eisa.diff
    - yacc_is_byacc.diff
    - 15_manpages_gzip.diff
    - avoid_defsyspath_collision.diff
    - hppa.diff

 -- Steven Chamberlain <steven@pyro.eu.org>  Sat, 06 Feb 2016 22:50:09 +0000

freebsd-buildutils (10.2-2) experimental; urgency=medium

  * arch=all autobuilding doesn't seem to work for this yet

 -- Christoph Egger <christoph@debian.org>  Wed, 21 Oct 2015 14:28:20 +0200

freebsd-buildutils (10.2-1) experimental; urgency=medium

  * Update to 10.2 source
  * refresh patches
    * drop mk_ncp.diff -- was a workaround for kfreebsd-9
    * drop mk_hyperv.diff and mk_tests.diff now upstream
  * Compress orig-source with xz

 -- Christoph Egger <christoph@debian.org>  Wed, 21 Oct 2015 12:10:45 +0200

freebsd-buildutils (10.0-7) unstable; urgency=medium

  * Cherry-pick r276494 from HEAD:
    Don't include bsd.sys.mk within bsd.kmod.mk
  * binary-indep target requires binary-arch to run first.

 -- Steven Chamberlain <steven@pyro.eu.org>  Wed, 08 Jul 2015 16:44:07 +0100

freebsd-buildutils (10.0-6) experimental; urgency=medium

  * Raise Build-Depends on freebsd-glue to >= 0.2.20~, to not be
    affected by #759249 if the installed libbsd-dev is newer
  * Do not use -fstack-protector on alpha

 -- Steven Chamberlain <steven@pyro.eu.org>  Tue, 21 Oct 2014 22:50:38 +0100

freebsd-buildutils (10.0-5) unstable; urgency=medium

  [ Petr Salinger ]
  * Backport mk_hyperv, needed by 10.1 RC

  [ Steven Chamberlain ]
  * backports MK_TESTS for freebsd-utils (>> 10.1~)