@@ -3,6 +3,7 @@ freebsd-buildutils (10.3~svn296373-1) UNRELEASED; urgency=medium
   * New upstream snapshot of 10.3-RC1
   * Mark freebsd-mk as Multi-Arch: foreign (thanks, Helmut Grohne!)
   * Map Debian's kfreebsd-armhf to FreeBSD's armv6 MACHINE_ARCH
+  * Actually use the proper build architecture compiler
 
  -- Steven Chamberlain <steven@pyro.eu.org>  Sat, 05 Mar 2016 00:27:01 +0000
 
